--- a/project.config.json
+++ b/project.config.json
@@ -12,9 +12,11 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.1.1",
-	"appid": "wxb8073f80eaad9da5",
+	"appid": "wx41cb7bb76f7159cd",
 	"projectname": "suyuan",
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
@@ -24,13 +26,35 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
-		"miniprogram": {
+		"gamePlugin": {
 			"current": -1,
 			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": [
+				{
+					"id": -1,
+					"name": "pages/shopsList/shopsList",
+					"pathName": "pages/shopsList/shopsList",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/quickEntry/quickEntry",
+					"pathName": "pages/quickEntry/quickEntry",
+					"scene": null
+				}
+			]
 		}
 	}
 }
